# wasm-agent-based-models

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  app.js  app.scss  index.html  package-lock.json  package.json  webpack.config.js
js/: index.js
src/: app.js  app.scss  lib.rs  utils.rs
static/: index.html  style.css
