#  This file is part of wasm-agent-based-models:
#  Reliable and efficient agent-based models in Rust and WebAssembly
#  
#   Copyright 2020 Fabio A. Correa Duran facorread@gmail.com
#  
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#  
#      http://www.apache.org/licenses/LICENSE-2.0
#  
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
[package]
name = "wasm-agent-based-models"
version = "0.1.0"
authors = ["Fabio A. Correa Duran <facorread@gmail.com>"]
description = "Reliable and efficient agent-based models in Rust and WebAssembly"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/facorread/wasm-agent-based-models"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
plotters = "0.3.0"
plotters-canvas = "0.3.0"
rand =  "0.7.3"
rand_distr = "0.3.0"
rand_pcg = "0.2.1"
slotmap = "0.4.0"
wasm-bindgen = "0.2.69"
wrapping_coords2d = "0.1.9"

[dependencies.console_error_panic_hook]
version = "0.1.6"
optional = true

[dependencies.web-sys]
version = "0.3.46"
features = [
  'Document',
  'Element',
  'EventTarget',
  'HtmlElement',
  'Window',
]

[dependencies.wee_alloc]
version = "0.4.5"
optional = true

[dev-dependencies]
wasm-bindgen-test = "0.3.19"
# futures = "0.1.27"
# wasm-bindgen-futures = "0.3.22"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
