#  This file is part of wasm-agent-based-models:
#  Reliable and efficient agent-based models in Rust and WebAssembly
#  
#   Copyright 2020 Fabio A. Correa Duran facorread@gmail.com
#  
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#  
#      http://www.apache.org/licenses/LICENSE-2.0
#  
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
[package]
name = "wasm-agent-based-models"
version = "0.1.0"
authors = ["Fabio A. Correa Duran <facorread@gmail.com>"]
description = "Reliable and efficient agent-based models in Rust and WebAssembly"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/facorread/wasm-agent-based-models"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook", "all-graphics"] # This sofware comes with all features activated: landscape and networks with figures
all-graphics = ["landscape-graphics", "net-graphics"]

landscape-graphics = ["landscape-metrics", "graphics"]
net-graphics = ["net-metrics", "graphics"]

# The following features use memory; enable those that are strictly necessary.
graphics = ["agent-metrics"] # Enable figures; by default, figures describe agents only.
agent-metrics = [] # Accumulate metrics from agents
landscape-metrics = ["landscape"] # Accumulate metrics from the landscape
net-metrics = ["net"] # Accumulate metrics from the social network

# The following features consume CPU time; enable those that are strictly necessary.
landscape = [] # Enable the landscape
net = [] # Enable social networks

[dependencies]
js-sys = "0.3.46"
plotters = "0.3.0"
plotters-canvas = "0.3.0"
rand =  "0.8.1"
rand_distr = "0.4.0"
rand_pcg = "0.3.0"
slotmap = "1.0.1"
wasm-bindgen = "0.2.69"
wasm-bindgen-futures = "0.4.19"
wrapping_coords2d = "0.1.9"

[dependencies.console_error_panic_hook]
version = "0.1.6"
optional = true

[dependencies.getrandom]
version = "0.2.1"
features = ["js"]

[dependencies.wee_alloc]
version = "0.4.5"
optional = true

[dev-dependencies]
wasm-bindgen-test = "0.3.19"
# futures = "0.1.27"
# wasm-bindgen-futures = "0.3.22"

[package.metadata.wasm-pack.profile.release]
# Tell `rustc` to optimize for high performance.
wasm-opt = ["-O2"]

[profile.dev]
debug = true
lto = "off"
opt-level = 0

[profile.release]
# Tell `rustc` to optimize for small code size.
# lto = true
# opt-level = "s"

# Tell `rustc` to optimize for high performance.
lto = true
opt-level = 2
